fixed scrollbar behaviour in posts list and image scaling for big screens

--- a/style.css
+++ b/style.css
@@ -55,8 +55,7 @@ a:active, a:hover, button:active, button:hover, .current {
 }
 
 img {
-	max-width: 100%;
-	max-height: 100%;
+	height: 100%;
 }
 
 /* Scrollbars */
@@ -122,7 +121,7 @@ img {
 }
 
 .sidenav.collapsible {
-  overflow-y: scroll;
+  overflow-y: auto;
   flex: 999; /* HACK expand to maximum height */
   max-height: 0; /* default collapsed */
 }
